force-app/main/default/objects/PMO_TaskAssignment__c/PMO_TaskAssignment__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting confirms whether the child task should be automatically created or not for a task in the trigger PMO_Task</description>
    <label>PMO_TaskAssignment</label>
</CustomObject>