force-app/main/default/objects/PMO_TaskAssignment__c/fields/Owner_Queue__c.field-meta.xml
<CustomField>
    <fullName>Owner_Queue__c</fullName>
    <description>It stores the ID of the user to which the new task would be assigned</description>
    <label>Owner/Queue</label>
    <length>20</length>
    <type>Text</type>
</CustomField>