force-app/main/default/objects/PMO_TaskAssignment__c/fields/Preceding_Task__c.field-meta.xml
<CustomField>
    <fullName>Preceding_Task__c</fullName>
    <description>It stores the preceding task of the current task.</description>
    <label>Preceding Task</label>
    <length>100</length>
    <type>Text</type>
</CustomField>