force-app/main/default/objects/PMO_TaskAssignment__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <description>It stores the task name.</description>
    <label>Task</label>
    <length>100</length>
    <type>Text</type>
</CustomField>